test/Fail/OptionBuildLibraryWithBackend.agda
-- Andreas, 2025-08-07
-- Trigger error when --build-library is combined with yet unsupported backend,
-- e.g. --html.

-- File left empty intentionally.
